--- a/.classpath
+++ b/.classpath
@@ -214,5 +214,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/joaqu/.katalon/packages/KS-10.0.0/configuration/org.eclipse.osgi/32/0/.cp/resources/basic-report/katalon-studio-report-plugin.jar"/>
 	<classpathentry kind="con" path="GROOVY_SUPPORT"/>
+	<classpathentry kind="con" path="GROOVY_DSL_SUPPORT"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
