Added test suite collection for Reliability test

--- a/.project
+++ b/.project
@@ -21,16 +21,6 @@
 			<type>1</type>
 			<location>C:/Users/joaqu/AppData/Local/Temp/Katalon/Web Services/kat-10786089830691411759.groovy</location>
 		</link>
-		<link>
-			<name>kat-1627317940316793224.groovy</name>
-			<type>1</type>
-			<location>C:/Users/joaqu/AppData/Local/Temp/Katalon/Web Services/kat-1627317940316793224.groovy</location>
-		</link>
-		<link>
-			<name>kat-17701126008539250931.groovy</name>
-			<type>1</type>
-			<location>C:/Users/joaqu/AppData/Local/Temp/Katalon/Web Services/kat-17701126008539250931.groovy</location>
-		</link>
 	</linkedResources>
 	<filteredResources>
 		<filter>
@@ -80,6 +70,24 @@
 		</filter>
 		<filter>
 			<id>1732187914411</id>
+			<name></name>
+			<type>6</type>
+			<matcher>
+				<id>org.eclipse.core.resources.regexFilterMatcher</id>
+				<arguments>(.*\.svn-base$)|(.*\.png$)|(.*\.log$)|(.*\.xlsx$)|(.*\.xls$)|(.*\.csv$)|(.*\.txt$)</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1732210430375</id>
+			<name></name>
+			<type>10</type>
+			<matcher>
+				<id>org.eclipse.core.resources.regexFilterMatcher</id>
+				<arguments>.*\.svn$</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1732210430384</id>
 			<name></name>
 			<type>6</type>
 			<matcher>
